add import view

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -593,6 +593,9 @@
   "exportVault": {
     "message": "Export Vault"
   },
+  "importVault": {
+    "message": "Import vault"
+  },
   "fileFormat": {
     "message": "File Format"
   },
