--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -593,6 +593,9 @@
   "exportVault": {
     "message": "导出密码库"
   },
+  "importVault": {
+    "message": "导入密码库"
+  },
   "fileFormat": {
     "message": "文件格式"
   },
