--- a/src/_locales/en_GB/messages.json
+++ b/src/_locales/en_GB/messages.json
@@ -593,6 +593,9 @@
   "exportVault": {
     "message": "Export vault"
   },
+  "importVault": {
+    "message": "Import vault"
+  },
   "fileFormat": {
     "message": "File format"
   },
